# agent-recall-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_recall_ai/: __init__.py  __main__.py  checkpoint.py
agent_recall_ai/adapters/: __init__.py  anthropic_adapter.py  base.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  openai_adapter.py  smolagents_adapter.py
agent_recall_ai/cli/: main.py
agent_recall_ai/core/: __init__.py  compressor.py  semantic_pruner.py  state.py  tracker.py
agent_recall_ai/exporters/: __init__.py  datadog.py  otlp.py
agent_recall_ai/monitors/: __init__.py  base.py  cost_monitor.py  drift_monitor.py  package_monitor.py  token_monitor.py  tool_bloat_monitor.py
agent_recall_ai/persistence/: __init__.py  redis_provider.py  sqlite_provider.py
agent_recall_ai/privacy/: __init__.py  presidio_backend.py  redactor.py  versioned_schema.py
agent_recall_ai/storage/: __init__.py  disk.py  memory.py
dashboard/: index.html
demo/: RECORDING_GUIDE.md  index.html  make_video.py
demo/render/: clip_00.webm  clip_01.webm  clip_02.webm  clip_03.webm  clip_04.webm  clip_05.webm  clip_06.webm  clip_07.webm  clip_08.webm  concat.txt
examples/anthropic_agent/: agent.py
examples/langchain_agent/: agent.py
examples/openai_agent/: agent.py
proto/: schema.proto
scripts/: benchmark.py
tests/: test_adapters.py  test_application.py  test_checkpoint.py  test_cli.py  test_compressor.py  test_e2e.py  test_monitors.py  test_new_features.py  test_persistence.py  test_privacy.py  test_regression.py  test_semantic_pruner.py  test_state.py  test_tracker.py
